// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RightStickySection should render its default content 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flex": "0 0 auto",
      "position": "sticky",
      "right": "0",
    }
  }
/>
`;

exports[`RightStickySection should render the given columns 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flex": "0 0 auto",
      "position": "sticky",
      "right": "0",
    }
  }
>
  <React.Fragment
    key="rightSection=0"
  >
    <ScrollSyncColumn
      className=""
      dataKey="a"
      key="a"
      width="150px"
    >
      Column A
    </ScrollSyncColumn>
  </React.Fragment>
  <React.Fragment
    key="rightSection=1"
  >
    <ScrollSyncColumn
      className=""
      dataKey="b"
      key="b"
      width="150px"
    >
      Column B
    </ScrollSyncColumn>
  </React.Fragment>
</div>
`;
